--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,7 +6,8 @@
       "name": "Untitled",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP0o6b5AOXFACsxdjuiLaxD",
+      "mount_file_id": "1sLCk94P4MC85cqFILYYmW4QqEkzXatf2",
+      "authorship_tag": "ABX9TyMyq3Fv5a6gj/P31Wto/vTI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +30,47 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AfTU1-BTcmr8",
+        "id": "MCVXYeytOW5q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f936bf1a-26f5-4ff1-c444-fdf44453a2e8"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "train_test_split([1,2,3,4] , \n",
+        "                 [5,6,7,8] ,\n",
+        "                 [9,10,11,12],\n",
+        "                 test_size = 0.25  )"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[3, 4, 1], [2], [7, 8, 5], [6], [11, 12, 9], [10]]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nFhR67Gnxb-v",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "916d294e-16e6-4f20-cd18-029944e85614"
+        "outputId": "2f68d9bc-bd39-4819-914a-e638a567a706"
       },
       "source": [
         "import pandas as pd\n",
@@ -44,9 +79,10 @@
         "df = pd.DataFrame(iris[\"data\"] , \n",
         "            columns = iris[\"feature_names\"])\n",
         "df[\"answer\"] = iris[\"target\"]\n",
+        "df.to_csv(\"iris.csv \", encoding = \"utf-8\" , index = False)\n",
         "df\n"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,9 +227,195 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AfTU1-BTcmr8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "outputId": "808cb86d-fc47-4ba6-e948-ced80d6ca72f"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.datasets import load_iris\n",
+        "iris = load_iris()\n",
+        "df = pd.DataFrame(iris[\"data\"] , \n",
+        "            columns = iris[\"feature_names\"])\n",
+        "df[\"answer\"] = iris[\"target\"]\n",
+        "df\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sepal length (cm)</th>\n",
+              "      <th>sepal width (cm)</th>\n",
+              "      <th>petal length (cm)</th>\n",
+              "      <th>petal width (cm)</th>\n",
+              "      <th>answer</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>5.1</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4.9</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4.7</td>\n",
+              "      <td>3.2</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4.6</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5.0</td>\n",
+              "      <td>3.6</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>145</th>\n",
+              "      <td>6.7</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>146</th>\n",
+              "      <td>6.3</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>1.9</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>147</th>\n",
+              "      <td>6.5</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>148</th>\n",
+              "      <td>6.2</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>5.4</td>\n",
+              "      <td>2.3</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>149</th>\n",
+              "      <td>5.9</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.1</td>\n",
+              "      <td>1.8</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>150 rows × 5 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     sepal length (cm)  sepal width (cm)  ...  petal width (cm)  answer\n",
+              "0                  5.1               3.5  ...               0.2       0\n",
+              "1                  4.9               3.0  ...               0.2       0\n",
+              "2                  4.7               3.2  ...               0.2       0\n",
+              "3                  4.6               3.1  ...               0.2       0\n",
+              "4                  5.0               3.6  ...               0.2       0\n",
+              "..                 ...               ...  ...               ...     ...\n",
+              "145                6.7               3.0  ...               2.3       2\n",
+              "146                6.3               2.5  ...               1.9       2\n",
+              "147                6.5               3.0  ...               2.0       2\n",
+              "148                6.2               3.4  ...               2.3       2\n",
+              "149                5.9               3.0  ...               1.8       2\n",
+              "\n",
+              "[150 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tjt0yshLQ5Lt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "# 9:1 data  9:1 target\n",
+        "x_train , x_test , y_train , y_test =train_test_split(iris[\"data\"] , \n",
+        "                 iris[\"target\"],\n",
+        "                 test_size = 0.1)"
+      ],
+      "execution_count": 18,
+      "outputs": []
     }
   ]
 }
