--- a/boston.ipynb
+++ b/boston.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1sLCk94P4MC85cqFILYYmW4QqEkzXatf2",
-      "authorship_tag": "ABX9TyMgPhXCAzsD50SC69zAEpc/",
+      "authorship_tag": "ABX9TyPbcy2PN/mTlxOgnaGqSP+M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "553fd394-657d-4e61-d967-b508ca4c7dc4"
+        "outputId": "fc7bc896-c7cd-4e4f-c1f2-5c6750236eb3"
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -45,19 +45,19 @@
         "                 [9,10,11,12],\n",
         "                 test_size = 0.25  )"
       ],
-      "execution_count": null,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[2, 4, 3], [1], [6, 8, 7], [5], [10, 12, 11], [9]]"
+              "[[2, 3, 4], [1], [6, 7, 8], [5], [10, 11, 12], [9]]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 166
+          "execution_count": 178
         }
       ]
     },
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "72b4aaa4-f6ef-4065-f7ba-c1c3dbd3479d"
+        "outputId": "c4f54ec1-2e80-4669-e869-090cb6293ee6"
       },
       "source": [
         "import pandas as pd\n",
@@ -79,11 +79,11 @@
         "df = pd.DataFrame(boston[\"data\"] , \n",
         "            columns = boston[\"feature_names\"])\n",
         "df[\"answer\"] = boston[\"target\"]\n",
-        "df.to_csv(\"iris.csv \", encoding = \"utf-8\" , index = False)\n",
+        "df.to_csv(\"boston.csv \", encoding = \"utf-8\" , index = False)\n",
         "df\n",
         "print(boston[\"feature_names\"],[\"target\"])"
       ],
-      "execution_count": 8,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 407
         },
-        "outputId": "630f2b4b-345f-4299-9e74-6138de660336"
+        "outputId": "2d13dd54-1bfe-466a-9922-98197ce63ed0"
       },
       "source": [
         "import pandas as pd\n",
@@ -115,7 +115,7 @@
         "df[\"answer\"] = boston[\"target\"]\n",
         "df\n"
       ],
-      "execution_count": 9,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +368,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 183
         }
       ]
     },
@@ -386,7 +386,7 @@
         "                 boston[\"target\"],\n",
         "                 test_size = 0.1)"
       ],
-      "execution_count": 4,
+      "execution_count": 185,
       "outputs": []
     },
     {
@@ -398,14 +398,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 126
         },
-        "outputId": "ac5da488-b3c1-491e-c295-89e58f6f49c8"
+        "outputId": "dfe5b27d-147e-4eef-8ce4-e6206ddcb3cd"
       },
       "source": [
         "from sklearn.tree import DecisionTreeRegressor\n",
-        "reg  = DecisionTreeRegressor(max_depth=5)  #預防過擬合\n",
+        "reg  = DecisionTreeRegressor(max_depth=5 , random_state= 0 )  #預防過擬合\n",
         "reg.fit(x_train , y_train)"
       ],
-      "execution_count": 10,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,13 +416,13 @@
               "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
               "                      min_samples_leaf=1, min_samples_split=2,\n",
               "                      min_weight_fraction_leaf=0.0, presort='deprecated',\n",
-              "                      random_state=None, splitter='best')"
+              "                      random_state=0, splitter='best')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 186
         }
       ]
     },
@@ -445,30 +445,31 @@
           "base_uri": "https://localhost:8080/",
           "height": 379
         },
-        "outputId": "d8da73d5-9965-40f3-9897-258a75648926"
+        "outputId": "dd0f1910-0f47-4548-beba-25ae94887a79"
       },
       "source": [
         "import graphviz \n",
         "from sklearn.tree import export_graphviz\n",
         "g = export_graphviz(clf,\n",
         "                   feature_names =boston[\"feature_names\"],\n",
-        "                   filled=True)\n",
+        "                   filled=True ,\n",
+        "                    max_depth = 5)\n",
         "graphviz.Source(g)"
       ],
-      "execution_count": 11,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<graphviz.files.Source at 0x7fe361984780>"
+              "<graphviz.files.Source at 0x7fe361723748>"
             ],
             "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n<!-- Generated by graphviz version 2.40.1 (20161225.0304)\n -->\n<!-- Title: Tree Pages: 1 -->\n<svg width=\"483pt\" height=\"269pt\"\n viewBox=\"0.00 0.00 483.00 269.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 265)\">\n<title>Tree</title>\n<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"-4,4 -4,-265 479,-265 479,4 -4,4\"/>\n<!-- 0 -->\n<g id=\"node1\" class=\"node\">\n<title>0</title>\n<polygon fill=\"#f8dfcd\" stroke=\"#000000\" points=\"289,-261 185,-261 185,-193 289,-193 289,-261\"/>\n<text text-anchor=\"middle\" x=\"237\" y=\"-245.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">RM &lt;= 6.971</text>\n<text text-anchor=\"middle\" x=\"237\" y=\"-230.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mse = 83.424</text>\n<text text-anchor=\"middle\" x=\"237\" y=\"-215.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">samples = 455</text>\n<text text-anchor=\"middle\" x=\"237\" y=\"-200.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">value = 22.503</text>\n</g>\n<!-- 1 -->\n<g id=\"node2\" class=\"node\">\n<title>1</title>\n<polygon fill=\"#fbeade\" stroke=\"#000000\" points=\"233.5,-157 108.5,-157 108.5,-89 233.5,-89 233.5,-157\"/>\n<text text-anchor=\"middle\" x=\"171\" y=\"-141.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">LSTAT &lt;= 14.405</text>\n<text text-anchor=\"middle\" x=\"171\" y=\"-126.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mse = 39.268</text>\n<text text-anchor=\"middle\" x=\"171\" y=\"-111.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">samples = 391</text>\n<text text-anchor=\"middle\" x=\"171\" y=\"-96.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">value = 19.971</text>\n</g>\n<!-- 0&#45;&gt;1 -->\n<g id=\"edge1\" class=\"edge\">\n<title>0&#45;&gt;1</title>\n<path fill=\"none\" stroke=\"#000000\" d=\"M215.3891,-192.9465C209.8622,-184.2373 203.8494,-174.7626 198.0854,-165.6801\"/>\n<polygon fill=\"#000000\" stroke=\"#000000\" points=\"200.9729,-163.6979 192.6594,-157.13 195.0626,-167.4487 200.9729,-163.6979\"/>\n<text text-anchor=\"middle\" x=\"187.2058\" y=\"-177.8279\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">True</text>\n</g>\n<!-- 4 -->\n<g id=\"node5\" class=\"node\">\n<title>4</title>\n<polygon fill=\"#eb9f68\" stroke=\"#000000\" points=\"356,-157 252,-157 252,-89 356,-89 356,-157\"/>\n<text text-anchor=\"middle\" x=\"304\" y=\"-141.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">RM &lt;= 7.437</text>\n<text text-anchor=\"middle\" x=\"304\" y=\"-126.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mse = 74.837</text>\n<text text-anchor=\"middle\" x=\"304\" y=\"-111.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">samples = 64</text>\n<text text-anchor=\"middle\" x=\"304\" y=\"-96.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">value = 37.969</text>\n</g>\n<!-- 0&#45;&gt;4 -->\n<g id=\"edge4\" class=\"edge\">\n<title>0&#45;&gt;4</title>\n<path fill=\"none\" stroke=\"#000000\" d=\"M258.9383,-192.9465C264.549,-184.2373 270.6529,-174.7626 276.5042,-165.6801\"/>\n<polygon fill=\"#000000\" stroke=\"#000000\" points=\"279.5389,-167.4321 282.0124,-157.13 273.6543,-163.641 279.5389,-167.4321\"/>\n<text text-anchor=\"middle\" x=\"287.2994\" y=\"-177.8646\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">False</text>\n</g>\n<!-- 2 -->\n<g id=\"node3\" class=\"node\">\n<title>2</title>\n<polygon fill=\"#f8dcc8\" stroke=\"#000000\" points=\"104,-53 0,-53 0,0 104,0 104,-53\"/>\n<text text-anchor=\"middle\" x=\"52\" y=\"-37.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mse = 24.793</text>\n<text text-anchor=\"middle\" x=\"52\" y=\"-22.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">samples = 237</text>\n<text text-anchor=\"middle\" x=\"52\" y=\"-7.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">value = 23.268</text>\n</g>\n<!-- 1&#45;&gt;2 -->\n<g id=\"edge2\" class=\"edge\">\n<title>1&#45;&gt;2</title>\n<path fill=\"none\" stroke=\"#000000\" d=\"M129.0451,-88.9777C117.3014,-79.4545 104.5562,-69.1191 92.876,-59.6473\"/>\n<polygon fill=\"#000000\" stroke=\"#000000\" points=\"94.9568,-56.8286 84.9852,-53.2485 90.5478,-62.2656 94.9568,-56.8286\"/>\n</g>\n<!-- 3 -->\n<g id=\"node4\" class=\"node\">\n<title>3</title>\n<polygon fill=\"#ffffff\" stroke=\"#000000\" points=\"226,-53 122,-53 122,0 226,0 226,-53\"/>\n<text text-anchor=\"middle\" x=\"174\" y=\"-37.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mse = 19.075</text>\n<text text-anchor=\"middle\" x=\"174\" y=\"-22.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">samples = 154</text>\n<text text-anchor=\"middle\" x=\"174\" y=\"-7.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">value = 14.897</text>\n</g>\n<!-- 1&#45;&gt;3 -->\n<g id=\"edge3\" class=\"edge\">\n<title>1&#45;&gt;3</title>\n<path fill=\"none\" stroke=\"#000000\" d=\"M172.0577,-88.9777C172.3139,-80.7364 172.589,-71.887 172.8493,-63.5153\"/>\n<polygon fill=\"#000000\" stroke=\"#000000\" points=\"176.3559,-63.3524 173.1684,-53.2485 169.3593,-63.1349 176.3559,-63.3524\"/>\n</g>\n<!-- 5 -->\n<g id=\"node6\" class=\"node\">\n<title>5</title>\n<polygon fill=\"#f0b68d\" stroke=\"#000000\" points=\"353,-53 249,-53 249,0 353,0 353,-53\"/>\n<text text-anchor=\"middle\" x=\"301\" y=\"-37.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mse = 32.033</text>\n<text text-anchor=\"middle\" x=\"301\" y=\"-22.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">samples = 36</text>\n<text text-anchor=\"middle\" x=\"301\" y=\"-7.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">value = 32.372</text>\n</g>\n<!-- 4&#45;&gt;5 -->\n<g id=\"edge5\" class=\"edge\">\n<title>4&#45;&gt;5</title>\n<path fill=\"none\" stroke=\"#000000\" d=\"M302.9423,-88.9777C302.6861,-80.7364 302.411,-71.887 302.1507,-63.5153\"/>\n<polygon fill=\"#000000\" stroke=\"#000000\" points=\"305.6407,-63.1349 301.8316,-53.2485 298.6441,-63.3524 305.6407,-63.1349\"/>\n</g>\n<!-- 6 -->\n<g id=\"node7\" class=\"node\">\n<title>6</title>\n<polygon fill=\"#e58139\" stroke=\"#000000\" points=\"475,-53 371,-53 371,0 475,0 475,-53\"/>\n<text text-anchor=\"middle\" x=\"423\" y=\"-37.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">mse = 37.824</text>\n<text text-anchor=\"middle\" x=\"423\" y=\"-22.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">samples = 28</text>\n<text text-anchor=\"middle\" x=\"423\" y=\"-7.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">value = 45.164</text>\n</g>\n<!-- 4&#45;&gt;6 -->\n<g id=\"edge6\" class=\"edge\">\n<title>4&#45;&gt;6</title>\n<path fill=\"none\" stroke=\"#000000\" d=\"M345.9549,-88.9777C357.6986,-79.4545 370.4438,-69.1191 382.124,-59.6473\"/>\n<polygon fill=\"#000000\" stroke=\"#000000\" points=\"384.4522,-62.2656 390.0148,-53.2485 380.0432,-56.8286 384.4522,-62.2656\"/>\n</g>\n</g>\n</svg>\n"
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 188
         }
       ]
     },
@@ -477,12 +478,44 @@
       "metadata": {
         "id": "UnCWTEEagkrP",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3be10a47-9e10-491e-bf08-7efeda6cdfce"
+      },
+      "source": [
+        "from sklearn.metrics import r2_score\n",
+        "pre = reg.predict(x_test)\n",
+        "r2_score(y_test , pre)"
+      ],
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9209966591361423"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nv4PDBGBuhBv",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 155,
       "outputs": []
     }
   ]
